--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "@apollo/explorer": "^0.5.2",
-    "@docusaurus/core": "2.0.0-beta.20",
-    "@docusaurus/preset-classic": "2.0.0-beta.20",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.20",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.20",
+    "@docusaurus/theme-live-codeblock": "3.0.0",
     "@faststore/styles": "^2.0.3-alpha.0",
     "@faststore/ui": "^2.0.3-alpha.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -34,11 +34,11 @@
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.4.2",
-    "prism-react-renderer": "^1.2.1",
+    "prism-react-renderer": "^2.1.0",
     "purgecss": "^4.0.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-docgen-typescript": "^2.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
     "react-icons": "^4.2.0",
     "react-spring": "^9.2.4",
@@ -61,6 +61,9 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "typescript": "~5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
