--- a/package.json
+++ b/package.json
@@ -65,5 +65,10 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "scripts": {
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && docusaurus start",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && docusaurus build",
+    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && docusaurus serve"
   }
 }
