--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-live-codeblock": "^3.7.0",
-    "@mdx-js/react": "^3.0.0",
-    "@tailwindcss/postcss": "^4.0.7",
     "@faststore/styles": "2.0.3-alpha.0",
     "@faststore/ui": "2.0.3-alpha.0",
-    "clsx": "^2.0.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@mdx-js/react": "^3.0.0",
+    "@tailwindcss/postcss": "^4.0.7",
+    "clsx": "^2.0.0",
+    "docusaurus-plugin-react-docgen-typescript": "^1.3.0",
     "graphql": "^16.10.0",
     "match-sorter": "^8.0.0",
     "postcss": "^8.5.3",
@@ -31,6 +32,7 @@
     "postcss-preset-env": "^7.4.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
+    "react-docgen-typescript": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-live": "^4.1.8",
     "react-table": "^7.8.0",
@@ -40,7 +42,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
     "@docusaurus/types": "3.7.0",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "typescript": "^5.7.3"
   },
   "browserslist": {
     "production": [
