--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "redirects": [
-    {
-      "source": "/:path*",
-      "destination": "https://developers.vtex.com/docs/guides/faststore",
-      "permanent": true,
-      "has": [
-        {
-          "type": "host",
-          "value": "faststore.dev"
-        }
-      ]
-    }
-  ]
+  "cleanUrls": true
 }
